# fastapi-books-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
app/: main.py
app/api/: controller.py
app/auth/: auth_handler.py
app/db/: __init__.py  database.py
app/models/: entities.py
tests/: test_main.py
